# souschef

./: .dockerignore  .gitignore  BRANDING.md  CLAUDE.md  biome.json  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/workflows/: railway.yml
apps/scraper/: Dockerfile  package.json  pyproject.toml
apps/scraper/app/: config.py  main.py  models.py  scraper.py  search.py  service.py
apps/web/: Dockerfile  auth.ts  capacitor.config.ts  env.ts  middleware.ts  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/app/(public)/: layout.tsx
apps/web/components/: capacitor-init.tsx  native-aware-drawer.tsx
apps/web/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx  filter-chips.tsx  slash-command-menu.tsx  suggestion-chips.tsx  url-pill.tsx  use-chat-header-actions.ts
apps/web/components/layout/: app-sidebar.tsx  dashboard-header.tsx  header-actions.tsx  mobile-nav.tsx
apps/web/components/recipe/: amazon-fresh-links.tsx  folder-pills.tsx  ingredient-image.tsx  move-to-folder-menu.tsx  open-in-app-button.tsx  public-comments.tsx  public-rating.tsx  recipe-card.tsx  recipe-detail.tsx  recipe-options-grid.tsx  recipe-toolbar.tsx  (+5 more)
apps/web/hooks/: use-sidebar-data.ts
apps/web/lib/: auth-client.ts  auth-store.ts
apps/web/scripts/: cap-sync.mjs
apps/web/stores/: chat-store.ts  header-actions-store.ts  recipes-store.ts
apps/web/trpc/: query-client.ts  react.tsx  server.ts
workflows/: railway.yml
(+32 files in other folders)
