[project]
name = "souschef-scraper"
version = "0.1.0"
description = "Recipe search and scraping service for SousChef"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "lxml>=5.0.0",
    "ddgs>=7.0.0",
    "pydantic-settings>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
